--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JSQR",
+  "name": "jsqr",
   "version": "1.0.2",
   "description": "JavaScript Quick Response Code Encoder Library",
   "readme": "README.md",
