--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
   },
   "devDependencies": {
-    "grunt": "^1.4.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^5.0.1"
+    "grunt": "1.4.0",
+    "grunt-contrib-concat": "2.0.0",
+    "grunt-contrib-uglify": "5.0.1"
   },
   "repository": {
     "type": "git",
